<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">RoomWordsSample</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="autores">Autores</string>
    <string name="resumen">resumen</string>
    <string name="titulo">Titulo</string>
    <string name="edicion">Edicion</string>
    <string name="editorial">Editorial</string>
    <string name="isbn">ISBN</string>
    <string name="tags">tags</string>
    <string name="n_a_value">N/A</string>
</resources>
